force-app/main/default/objects/ProductCatalogue__c/fields/OrderableMiddleEast__c.field-meta.xml
<CustomField>
    <fullName>OrderableMiddleEast__c</fullName>
    <formula>TEXT(ProductReferential__r.OrderableMiddleEast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderableMiddleEast</label>
    <type>Text</type>
</CustomField>