force-app/main/default/objects/ProductCatalogue__c/fields/OrderableNorthAmerica__c.field-meta.xml
<CustomField>
    <fullName>OrderableNorthAmerica__c</fullName>
    <formula>IF(not(isblank(ProductReferential__c)),IF(isblank(TEXT(ProductReferential__r.OrderableNorthAmerica__c)), &apos;Orderable&apos;, Text(ProductReferential__r.OrderableNorthAmerica__c)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderableNorthAmerica</label>
    <type>Text</type>
</CustomField>