force-app/main/default/objects/ProductCatalogue__c/fields/OrderableNorthAsia__c.field-meta.xml
<CustomField>
    <fullName>OrderableNorthAsia__c</fullName>
    <formula>IF(not(isblank(ProductReferential__c)),IF(isblank(TEXT(ProductReferential__r.OrderableNorthAsia__c)), &apos;Orderable&apos;, Text(ProductReferential__r.OrderableNorthAsia__c)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderableNorthAsia</label>
    <type>Text</type>
</CustomField>