force-app/main/default/objects/ProductCatalogue__c/fields/OrderableSouthAsia__c.field-meta.xml
<CustomField>
    <fullName>OrderableSouthAsia__c</fullName>
    <formula>IF(not(isblank(ProductReferential__c)),IF(isblank(TEXT(ProductReferential__r.OrderableSouthAsia__c)), &apos;Orderable&apos;, Text(ProductReferential__r.OrderableSouthAsia__c)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderableSouthAsia</label>
    <type>Text</type>
</CustomField>