force-app/main/default/objects/ProductCatalogue__c/fields/Pdf_Url__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Url__c</fullName>
    <label>Pdf Url</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>