force-app/main/default/objects/ProductCatalogue__c/fields/Pdf_Url_Date__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Url_Date__c</fullName>
    <label>Pdf Url Date</label>
    <type>Date</type>
</CustomField>