force-app/main/default/objects/ProductCatalogue__c/fields/PersonalisableSku__c.field-meta.xml
<CustomField>
    <fullName>PersonalisableSku__c</fullName>
    <description>[MakeItYours] Personalisable SKU (matching SKU starting with P and existing SKU) (no lookup to simplify the input for the user)</description>
    <label>Personalisable Sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>