force-app/main/default/objects/ProductCatalogue__c/fields/Personalizable__c.field-meta.xml
<CustomField>
    <fullName>Personalizable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalizable</label>
    <type>Checkbox</type>
</CustomField>