force-app/main/default/objects/ProductCatalogue__c/fields/Preciousmetals__c.field-meta.xml
<CustomField>
    <fullName>Preciousmetals__c</fullName>
    <label>Métaux précieux</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>