force-app/main/default/objects/ProductCatalogue__c/fields/Product_with_Lock_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_with_Lock_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIY-1754</description>
    <label>Product with Lock Number</label>
    <type>Checkbox</type>
</CustomField>