force-app/main/default/objects/ProductCatalogue__c/fields/ProductReferential__c.field-meta.xml
<CustomField>
    <fullName>ProductReferential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to ProductReferential. Lookup needed to get some information provided by ProductReferential object (SAP) and not in BCC (ETL / sku.json)</description>
    <label>Product Referential</label>
    <referenceTo>ProductReferential__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>