force-app/main/default/objects/ProductCatalogue__c/fields/productType__c.field-meta.xml
<CustomField>
    <fullName>productType__c</fullName>
    <label>productType</label>
    <length>3</length>
    <type>Text</type>
</CustomField>