force-app/main/default/objects/ProductCatalogue__c/fields/Rareearth__c.field-meta.xml
<CustomField>
    <fullName>Rareearth__c</fullName>
    <label>Terres rares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>