force-app/main/default/objects/ProductCatalogue__c/fields/ReadyToWearColorId__c.field-meta.xml
<CustomField>
    <fullName>ReadyToWearColorId__c</fullName>
    <label>Ready To Wear Color Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>