force-app/main/default/objects/ProductCatalogue__c/fields/ReadyToWearColorName__c.field-meta.xml
<CustomField>
    <fullName>ReadyToWearColorName__c</fullName>
    <label>Ready To Wear Color name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>