force-app/main/default/objects/ProductCatalogue__c/fields/ReadyToWearWidth__c.field-meta.xml
<CustomField>
    <fullName>ReadyToWearWidth__c</fullName>
    <label>Width (Ready To Wear)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>