force-app/main/default/objects/ProductCatalogue__c/fields/Recyclabilityfp__c.field-meta.xml
<CustomField>
    <fullName>Recyclabilityfp__c</fullName>
    <label>Recyclabilité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>