force-app/main/default/objects/ProductCatalogue__c/fields/Recycledfp__c.field-meta.xml
<CustomField>
    <fullName>Recycledfp__c</fullName>
    <label>Matières Recyclées</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>