force-app/main/default/objects/ProductCatalogue__c/fields/ReportingCategory__c.field-meta.xml
<CustomField>
    <fullName>ReportingCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For NY</description>
    <label>Reporting Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>