force-app/main/default/objects/ProductCatalogue__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <length>100</length>
    <type>Text</type>
</CustomField>