force-app/main/default/objects/ProductCatalogue__c/fields/ShoeColorId__c.field-meta.xml
<CustomField>
    <fullName>ShoeColorId__c</fullName>
    <label>Shoe Color Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>