force-app/main/default/objects/ProductCatalogue__c/fields/ShoeWidth__c.field-meta.xml
<CustomField>
    <fullName>ShoeWidth__c</fullName>
    <label>Shoe Width</label>
    <length>100</length>
    <type>Text</type>
</CustomField>