force-app/main/default/objects/ProductCatalogue__c/fields/size3D__c.field-meta.xml
<CustomField>
    <fullName>size3D__c</fullName>
    <label>size3D</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>