force-app/main/default/objects/ProductCatalogue__c/fields/SizeId__c.field-meta.xml
<CustomField>
    <fullName>SizeId__c</fullName>
    <label>Size Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>