force-app/main/default/objects/ProductCatalogue__c/fields/SizeName__c.field-meta.xml
<CustomField>
    <fullName>SizeName__c</fullName>
    <label>Size Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>