force-app/main/default/objects/ProductCatalogue__c/fields/SkinMaterial__c.field-meta.xml
<CustomField>
    <fullName>SkinMaterial__c</fullName>
    <label>Skin Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MAINMATERIAL2Z0226</fullName>
                <label>NILOTICUS</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0004</fullName>
                <label>WOOD</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0018</fullName>
                <label>CALF</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0026</fullName>
                <label>TAURILLON</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0027</fullName>
                <label>ALLIGATOR</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0037</fullName>
                <label>CROCODILE</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0045</fullName>
                <label>LIZARD</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0038</fullName>
                <label>POROSUS</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0216</fullName>
                <label>EXOTIC LEATHER_TBD</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0209</fullName>
                <label>COATED CANVAS</label>
            </value>
            <value>
                <fullName>MAINMATERIAL2Z0028</fullName>
                <label>ALLIGATOR MISSISSIPIENSIS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>