force-app/main/default/objects/ProductCatalogue__c/fields/SPO_Category__c.field-meta.xml
<CustomField>
    <fullName>SPO_Category__c</fullName>
    <description>[Special Order] difficult to know if a product is a belt (BCC doesn&apos;t give this data on sku.json, only ProductGroup__c=&apos;Accessoires&apos;). This field is used for SPO to get this values : &apos;Leather Goods&apos; (ProductGroup__c field) or &apos;BELTS&apos; (ProductReferential__c object field if the link with ProductReferential is not empty)</description>
    <formula>IF (
  NOT(ISBLANK(ProductReferential__c)),
    /* workaround as ProductReferential has Shoes, RTW, Jewelry, Perfume... since mid-May 2019 */
    IF (ISPICKVAL(ProductReferential__r.ProductCategory__c, &apos;Shoes&apos;),
       &apos;Souliers&apos;,
       ProductReferential__r.SPO_Category__c
    ),
  /* Quick workaround to send to JDE. BCC Json file sends Maroquinerie and no information about LG. 
		  - Should be great if BCC sends the Group in english like SAP Referential 
		  - Should be great to know if Accessoires is a Belt or a glass
		*/
  IF (
    ProductGroup__c = &apos;Maroquinerie&apos;,
    &apos;Leather goods&apos;,
    IF (
      ProductGroup__c = &apos;Accessoires&apos;,
      &apos;Accessories&apos;,
      ProductGroup__c
    )
  )
)</formula>
    <label>Category (SPO)</label>
    <type>Text</type>
</CustomField>