force-app/main/default/objects/ProductCatalogue__c/fields/Stiching__c.field-meta.xml
<CustomField>
    <fullName>Stiching__c</fullName>
    <label>Pays de Piquage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>