force-app/main/default/objects/ProductCatalogue__c/fields/StockRequest__c.field-meta.xml
<CustomField>
    <fullName>StockRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stock request (some SKUs are not in stock and are built on request to MyPR Product Request app)</description>
    <label>Stock Request</label>
    <type>Checkbox</type>
</CustomField>