force-app/main/default/objects/ProductCatalogue__c/fields/Sub_Aesthetic_Line__c.field-meta.xml
<CustomField>
    <fullName>Sub_Aesthetic_Line__c</fullName>
    <label>Sub Aesthetic Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AILLEURS</fullName>
            </value>
            <value>
                <fullName>ANTHEIA</fullName>
            </value>
            <value>
                <fullName>ANTIGUA</fullName>
            </value>
            <value>
                <fullName>ARCHIPEL SUMMER COLLECTION</fullName>
            </value>
            <value>
                <fullName>AUTRES CUIRS</fullName>
            </value>
            <value>
                <fullName>AUTRES CUIRS EXOTIQUES</fullName>
            </value>
            <value>
                <fullName>AUTRES CUIRS MONOGRAM</fullName>
            </value>
            <value>
                <fullName>AUTRES HIGH END</fullName>
            </value>
            <value>
                <fullName>AUTRES TOILES</fullName>
            </value>
            <value>
                <fullName>AUTRES TOILES MONOGRAM</fullName>
            </value>
            <value>
                <fullName>AUTRUCHE</fullName>
            </value>
            <value>
                <fullName>BELLAIX</fullName>
            </value>
            <value>
                <fullName>BEQUIA</fullName>
            </value>
            <value>
                <fullName>CAPUCINES</fullName>
            </value>
            <value>
                <fullName>CHEVRE FRISSON</fullName>
            </value>
            <value>
                <fullName>CHICAGO</fullName>
            </value>
            <value>
                <fullName>CONSTELLATION</fullName>
            </value>
            <value>
                <fullName>COSMIC BLOSSOM</fullName>
            </value>
            <value>
                <fullName>CROCODILIEN BRILLANT</fullName>
            </value>
            <value>
                <fullName>CROCODILIEN MAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>