force-app/main/default/objects/ProductCatalogue__c/fields/Synth__c.field-meta.xml
<CustomField>
    <fullName>Synth__c</fullName>
    <label>Matières Plastiques</label>
    <length>255</length>
    <type>Text</type>
</CustomField>