force-app/main/default/objects/ProductCatalogue__c/fields/tech_default_SKU__c.field-meta.xml
<CustomField>
    <fullName>tech_default_SKU__c</fullName>
    <formula>IF( NOT(ISBLANK(defaultSku__c)),defaultSku__c,SKU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_default_SKU</label>
    <type>Text</type>
</CustomField>