force-app/main/default/objects/ProductCatalogue__c/fields/tech_Obsolete__c.field-meta.xml
<CustomField>
    <fullName>tech_Obsolete__c</fullName>
    <description>Calculated from Obsolete_Status__c (used for Wardrobing)</description>
    <formula>IF(Obsolete_Status__c = &quot;Distribution - NIP (CEN)&quot;,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_Obsolete</label>
    <type>Checkbox</type>
</CustomField>