force-app/main/default/objects/ProductCatalogue__c/fields/Tech_Wardrobing_ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>Tech_Wardrobing_ImageUrl__c</fullName>
    <formula>IF(Contains( LOWER (Image1Url__c) , &quot;front&quot;), Image1Url__c, 
IF(Contains( LOWER (Image2Url__c) , &quot;front&quot;), Image2Url__c, 
IF(Contains( LOWER (Image3Url__c) , &quot;front&quot;), Image3Url__c, 
IF(Contains( LOWER (Image4Url__c) , &quot;front&quot;), Image4Url__c, 
IF(Contains( LOWER (Image5Url__c) , &quot;front&quot;), Image5Url__c,
&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Wardrobing_ImageUrl</label>
    <type>Text</type>
</CustomField>