force-app/main/default/objects/ProductCatalogue__c/fields/Technical_Data_Defined__c.field-meta.xml
<CustomField>
    <fullName>Technical_Data_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Data Defined</label>
    <type>Checkbox</type>
</CustomField>