force-app/main/default/objects/ProductCatalogue__c/fields/ThreeKit_Id__c.field-meta.xml
<CustomField>
    <fullName>ThreeKit_Id__c</fullName>
    <label>ThreeKit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>