force-app/main/default/objects/ProductCatalogue__c/fields/TypeId__c.field-meta.xml
<CustomField>
    <fullName>TypeId__c</fullName>
    <label>Type Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>