force-app/main/default/objects/ProductCatalogue__c/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <label>Type name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>