force-app/main/default/objects/ProductCatalogue__c/fields/Unavailable_Special_Order__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_Special_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked - the &quot;Personalization button will not appear in Now Yours app, and it will not be available on Creation app.</description>
    <label>Unavailable Special Order</label>
    <type>Checkbox</type>
</CustomField>