force-app/main/default/objects/ProductCatalogue__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>