force-app/main/default/objects/ProductCatalogue__c/fields/ViewCSC__c.field-meta.xml
<CustomField>
    <fullName>ViewCSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View CSC</label>
    <type>Checkbox</type>
</CustomField>