force-app/main/default/objects/ProductCatalogue__c/fields/ViewOnline__c.field-meta.xml
<CustomField>
    <fullName>ViewOnline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Online</label>
    <type>Checkbox</type>
</CustomField>