force-app/main/default/objects/ProductCatalogue__c/fields/ViewOnlineDate__c.field-meta.xml
<CustomField>
    <fullName>ViewOnlineDate__c</fullName>
    <label>ViewOnlineDate</label>
    <type>Date</type>
</CustomField>