force-app/main/default/objects/ProductCatalogue__c/fields/Wardrobing_Category__c.field-meta.xml
<CustomField>
    <fullName>Wardrobing_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wardrobing Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>Wardrobing_Product</relationshipName>
    <type>Lookup</type>
</CustomField>