force-app/main/default/objects/ProductCatalogue__c/fields/Weaving__c.field-meta.xml
<CustomField>
    <fullName>Weaving__c</fullName>
    <label>Pays de Tissage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>