force-app/main/default/objects/ProductCatalogue__c/fields/WidthCm__c.field-meta.xml
<CustomField>
    <fullName>WidthCm__c</fullName>
    <label>Width (in cm)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>