force-app/main/default/objects/ProductCatalogue__c/fields/WidthInch__c.field-meta.xml
<CustomField>
    <fullName>WidthInch__c</fullName>
    <label>Width (in inch)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>