force-app/main/default/objects/ProductCatalogue__c/fields/Workshop__c.field-meta.xml
<CustomField>
    <fullName>Workshop__c</fullName>
    <defaultValue>(&quot;0000&quot;)</defaultValue>
    <description>Manufacturing workshop code
(used for JDE system to know in which workshop the product should be sent)
For Perso app, value is set to 11202 (in product creation) but can be changed
Default value changed to 0000 on MIY-2062</description>
    <label>Workshop</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workshop</valueSetName>
    </valueSet>
</CustomField>