force-app/main/default/objects/ProductCatalogue__c/fields/Workshop_SKU__c.field-meta.xml
<CustomField>
    <fullName>Workshop_SKU__c</fullName>
    <description>Make It Yours Specific
Used when the SKU to send to the workshop is different than the one to use in retail.</description>
    <label>Workshop SKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>