force-app/main/default/objects/ProductCatalogue__c/listViews/All_Exotics.listView-meta.xml
<ListView>
    <fullName>All_Exotics</fullName>
    <booleanFilter>(1 OR 2) OR (3 AND 4)</booleanFilter>
    <columns>MIY_Order__c</columns>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>FluidRecipeId__c</columns>
    <columns>FluidImageRecipeId__c</columns>
    <columns>LeadTimeApproval__c</columns>
    <columns>LeadTimeManufacturing__c</columns>
    <columns>Generic_SKU__c</columns>
    <columns>appcataloguevalue__c</columns>
    <columns>Category__c</columns>
    <columns>ReportingCategory__c</columns>
    <columns>Exotic__c</columns>
    <columns>Image1Name__c</columns>
    <columns>Availability_is_Blacklist__c</columns>
    <columns>Available_In_Stores__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Women city bags</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Women small leather goods</value>
    </filters>
    <filters>
        <field>FluidRecipeId__c</field>
        <operation>greaterThan</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ostrich,sahara,crocodilians</value>
    </filters>
    <label>All Women Exotics for configuration</label>
</ListView>