force-app/main/default/objects/ProductCatalogue__c/listViews/All_Exotics_NILOTICUS.listView-meta.xml
<ListView>
    <fullName>All_Exotics_NILOTICUS</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>FluidRecipeId__c</columns>
    <columns>LeadTimeApproval__c</columns>
    <columns>LeadTimeDistribution__c</columns>
    <columns>LeadTimeManufacturing__c</columns>
    <columns>Generic_SKU__c</columns>
    <columns>ReportingCategory__c</columns>
    <columns>Exotic_Leather__c</columns>
    <columns>Exotic__c</columns>
    <columns>Workshop__c</columns>
    <columns>Category__c</columns>
    <columns>PDF_Views__c</columns>
    <columns>Website_Views__c</columns>
    <columns>Image1Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exotic_Leather__c</field>
        <operation>contains</operation>
        <value>Niloticus</value>
    </filters>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>notEqual</operation>
        <value>Event Exclusives</value>
    </filters>
    <label>All Exotics NILOTICUS</label>
</ListView>