force-app/main/default/objects/ProductCatalogue__c/listViews/All_RTW_Men.listView-meta.xml
<ListView>
    <fullName>All_RTW_Men</fullName>
    <booleanFilter>(1 OR 2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Workshop_SKU__c</columns>
    <columns>Category__c</columns>
    <columns>FluidRecipeId__c</columns>
    <columns>FluidImageRecipeId__c</columns>
    <columns>Workshop__c</columns>
    <columns>LeadTimeApproval__c</columns>
    <columns>LeadTimeManufacturing__c</columns>
    <columns>ReportingCategory__c</columns>
    <columns>LeadTimeDistribution__c</columns>
    <columns>MIY_Order__c</columns>
    <columns>Available_In_Stores__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>equals</operation>
        <value>LV Heritage</value>
    </filters>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>equals</operation>
        <value>MY LV WORLD TOUR.</value>
    </filters>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>equals</operation>
        <value>Ready to Wear Men</value>
    </filters>
    <label>All RTW Men</label>
</ListView>