force-app/main/default/objects/ProductCatalogue__c/listViews/Copy_of_Bespoke.listView-meta.xml
<ListView>
    <fullName>Copy_of_Bespoke</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Category__c</columns>
    <columns>Exotic__c</columns>
    <columns>ReportingCategory__c</columns>
    <columns>StockRequest__c</columns>
    <columns>Workshop__c</columns>
    <columns>FluidRecipeId__c</columns>
    <columns>FluidImageRecipeId__c</columns>
    <columns>Available_In_Stores__c</columns>
    <columns>LeadTimeApproval__c</columns>
    <columns>LeadTimeDistribution__c</columns>
    <columns>LeadTimeManufacturing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>equals</operation>
        <value>shoes</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>contains</operation>
        <value>Formal Shoes MTO</value>
    </filters>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>contains</operation>
        <value>monte carlo</value>
    </filters>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>contains</operation>
        <value>Formal Shoes MTO</value>
    </filters>
    <label>Monte Carlo + Varenne</label>
</ListView>