force-app/main/default/objects/ProductCatalogue__c/listViews/Copy_of_Exotics_Event_MILLA.listView-meta.xml
<ListView>
    <fullName>Copy_of_Exotics_Event_MILLA</fullName>
    <columns>MIY_Order__c</columns>
    <columns>SKU__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>ReportingCategory__c</columns>
    <columns>Workshop__c</columns>
    <columns>Exotic_Leather__c</columns>
    <columns>Generic_SKU__c</columns>
    <columns>ProductReferential__c</columns>
    <columns>LeadTimeApproval__c</columns>
    <columns>LeadTimeManufacturing__c</columns>
    <columns>LeadTimeDistribution__c</columns>
    <columns>Available_In_Stores__c</columns>
    <columns>Exotic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>contains</operation>
        <value>Small Leather Good</value>
    </filters>
    <label>Exotics SLG all products</label>
</ListView>