force-app/main/default/objects/ProductCatalogue__c/listViews/Exotic.listView-meta.xml
<ListView>
    <fullName>Exotic</fullName>
    <booleanFilter>(1 OR  2)</booleanFilter>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Generic_SKU__c</columns>
    <columns>MIY_Order__c</columns>
    <columns>Exotic__c</columns>
    <columns>Workshop__c</columns>
    <columns>LeadTimeApproval__c</columns>
    <columns>LeadTimeManufacturing__c</columns>
    <columns>Exotic_Leather__c</columns>
    <columns>Category__c</columns>
    <columns>ReportingCategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>equals</operation>
        <value>Resee SS20</value>
    </filters>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>equals</operation>
        <value>Event exclusives</value>
    </filters>
    <label>Exotic MTO</label>
</ListView>