force-app/main/default/objects/ProductCatalogue__c/listViews/Exotics_Event_Exclusives.listView-meta.xml
<ListView>
    <fullName>Exotics_Event_Exclusives</fullName>
    <columns>MIY_Order__c</columns>
    <columns>SKU__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>ReportingCategory__c</columns>
    <columns>Workshop__c</columns>
    <columns>Exotic_Leather__c</columns>
    <columns>Generic_SKU__c</columns>
    <columns>ProductReferential__c</columns>
    <columns>LeadTimeApproval__c</columns>
    <columns>LeadTimeManufacturing__c</columns>
    <columns>LeadTimeDistribution__c</columns>
    <columns>Available_In_Stores__c</columns>
    <columns>Exotic__c</columns>
    <columns>Image1Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReportingCategory__c</field>
        <operation>contains</operation>
        <value>Event Exclusives</value>
    </filters>
    <label>Exotics Event Exclusives Women</label>
</ListView>